[tool.poetry]
name = "abilene-venv"
version = "0.1.0"
description = ""
authors = ["Jinsu Hong <jhong36@student.gsu.edu>"]
readme = "README.md"
packages = [{include = "abilene_venv"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.3"
numpy = "2.1.3"
networkx = "3.4.2"
torch = "2.4.1"
torchvision = "0.19.1"
torchaudio = "2.4.1"
imageio = "^2.36.0"
mininet = "^2.3.0.dev6"
gymnasium = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
